--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "buildCommand": "cd backend && npm install && npm run build",
+  "outputDirectory": "backend",
   "public": false,
   "framework": "express",
   "functions": {
