Fix Vercel runtime configuration

--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,7 @@
   "framework": "express",
   "functions": {
     "api/**/*.js": {
-      "runtime": "nodejs20.x",
-      "memory": 1024,
-      "maxDuration": 30
+      "runtime": "nodejs20.x"
     }
   },
   "rewrites": [
